--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,11 @@ android {
         }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        externalNativeBuild {
+            cmake {
+                cppFlags ''
+            }
+        }
     }
 
     buildTypes {
@@ -28,9 +33,14 @@ android {
     }
     ndkVersion "22.1.7171670"
     externalNativeBuild {
-        cmake {
-            version "3.10.2"
-            path "CMakeLists.txt"
+//        // 使用cmake编译c++
+//        cmake {
+//            version '3.22.1'
+//            path file('CMakeLists.txt')
+//        }
+//      //  使用ndkBuild编译c++
+        ndkBuild {
+            path "jni/Android.mk"
         }
     }
 
