完善用多种方式调用ffmpeg so

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,15 +33,15 @@ android {
     }
     ndkVersion "22.1.7171670"
     externalNativeBuild {
-        // 使用cmake编译c++
-        cmake {
-            version '3.22.1'
-            path file('CMakeLists.txt')
-        }
-//      //  使用ndkBuild编译c++
-//        ndkBuild {
-//            path "jni/Android.mk"
+//        // 使用cmake编译c++
+//        cmake {
+//            version '3.22.1'
+//            path file('CMakeLists.txt')
 //        }
+      //  使用ndkBuild编译c++
+        ndkBuild {
+            path "jni/Android.mk"
+        }
     }
 
     compileOptions {
