jni读取文件的几种不同方式

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ android {
     namespace 'com.example.learnndk'
     compileSdk 33
 
+    sourceSets {
+
+    }
     defaultConfig {
         applicationId "com.example.learnndk"
         minSdk 24
