--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         versionName "1.0"
         ndk {
             moduleName "native-lib"
-//            abiFilters "arm64-v8a"
-            abiFilters 'armeabi-v7a'
+            abiFilters "arm64-v8a"
+//            abiFilters 'armeabi-v7a'
 
         }
         sourceSets.main {
